<resources>
    <string name="app_name">Calkulator</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>
    <string name="ac">AC</string>
    <string name="plus_minus">+/-</string>
    <string name="procents">%</string>
    <string name="delenie">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="tochka">.</string>
    <string name="egual">=</string>
    <string name="_00">0</string>
    <string name="result">result</string>
    <string name="policies">Policies</string>
    <string name="policy">Policy</string>
    <string name="product_category">Product Category</string>
    <string name="origin_country">Origin Country</string>
    <string name="brand">Brand</string>
    <string name="current_policies">Current Policies</string>
    <string name="export_an_csv">Export an CSV</string>
</resources>